# 5etools-avrae

./: .gitignore  5et.json  CMakeLists.txt  README.md  epb.json  hailstone (2).json  hailstone.json  in.json  main.cpp  out.json
include/: Avrae.h  main.h  parsers.h
src/: CMakeLists.txt  main.cpp  parsers.cpp
